--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,5 @@
 PORT=4000
-DB_URI="mongodb://127.0.0.1:27017/Ecommerse"
+DB_URI="mongodb+srv://bitbytecoders:bitbytecoder123@cluster0.shit8by.mongodb.net/ecommerce"
 JWT_SECRET=kjashfdjhjak87hfd89hj87jb8
 JWT_EXPIRE=5d
 SMTP_SERVICE="gmail"
