--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
     "nodemailer": "^6.9.4",
+        "node": "^20.5.1",
     "parser": "^0.1.4",
     "validator": "^13.9.0"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": "This website help to clean E-waste"
 }
