--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "moongose": "^1.0.0",
 
     "nodemailer": "^6.9.4",
-        "node": "^20.5.1",
-    "parser": "^0.1.4",
+    "node": "^20.5.1",
+    "parser": "^0.4-0.9",
     "validator": "^13.9.0"
   },
   "main": "app.js",
