--- a/package.json
+++ b/package.json
@@ -21,16 +21,9 @@
     "express": "^4.18.2",
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.1",
-    "moongose": "^1.0.0",
-
+    "mongoose": "^7.3.4",
     "nodemailer": "^6.9.4",
-    "node": "^20.5.1",
-    "parser": "^0.4-0.9",
+    "parser": "^0.1.4",
     "validator": "^13.9.0"
-  },
-  "main": "app.js",
-  "devDependencies": {},
-  "author": "",
-  "license": "ISC",
-  "description": "This website help to clean E-waste"
+  }
 }
