--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.18.2",
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.4",
+    "moongose": "^1.0.0",
+
     "nodemailer": "^6.9.4",
     "parser": "^0.1.4",
         "moongose": "^1.0.0",
