--- a/package.json
+++ b/package.json
@@ -11,22 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "cloudinary": "^1.38.0",
+    "cloudinary": "^1.40.0",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "js": "^0.1.0",
-    "jsonwebtoken": "^9.0.1",
-    "moongose": "^1.0.0",
-
-    "nodemailer": "^6.9.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "node": "^20.5.1",
+    "nodemailer": "^6.9.5",
     "parser": "^0.1.4",
-        "moongose": "^1.0.0",
-
-    "validator": "^13.9.0"
+    "validator": "^13.11.0"
   }
 }
