--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "js": "^0.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
+ "express": "^4.16.4",
+    "express-session": "^1.17.3",
+    "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.1",
+    "moongose": "^1.0.0",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "node": "^20.5.1",
-    "nodemailer": "^6.9.5",
-    "parser": "^0.1.4",
+    "node-nlp": "^4.27.0",
+    "nodemon": "^3.0.1",
     "validator": "^13.11.0"
   }
 }
